--- a/default.latex
+++ b/default.latex
@@ -69,6 +69,36 @@ $endif$
 $endif$
 $if(listings)$
 \usepackage{listings}
+\usepackage{xcolor}
+% Use listing color scheme
+% Contents of listings-setup.tex
+\lstset{%
+    basicstyle=\ttfamily,
+    % numbers=left,
+    keywordstyle=\color[rgb]{0.13,0.29,0.53}\bfseries,
+    stringstyle=\color[rgb]{0.31,0.60,0.02},
+    commentstyle=\color[rgb]{0.56,0.35,0.01}\itshape,
+    numberstyle=\footnotesize,
+    stepnumber=1,
+    numbersep=5pt,
+    backgroundcolor=\color[RGB]{248,248,248},
+    showspaces=false,
+    showstringspaces=false,
+    showtabs=false,
+    tabsize=2,
+    captionpos=b,
+    breaklines=true,
+    breakatwhitespace=true,
+    breakautoindent=true,
+    escapeinside={\%*}{*)},
+    linewidth=\textwidth,
+    basewidth=0.5em,
+    frame=single,
+}
+
+\renewcommand{\lstlistingname}{Example}% Listing -> Algorithm
+\renewcommand{\lstlistlistingname}{List of \lstlistingname s}% List of Listings -> List of Algorithms
+% end listing
 $endif$
 $if(lhs)$
 \lstnewenvironment{code}{\lstset{language=Haskell,basicstyle=\small\ttfamily}}{}
@@ -101,6 +131,7 @@ $endif$
 \else
   \usepackage[unicode=true]{hyperref}
 \fi
+
 \hypersetup{breaklinks=true,
             bookmarks=true,
             pdfauthor={$author-meta$},
